# amqp-api-server

./: Cargo.toml
src/api/: init.rs  initialization_package.rs
src/api/input/: amqp_request_dispatch.rs  amqp_request_replier.rs  input_element.rs  request.rs  request_result_error_extension.rs  token.rs
src/api/output/: amqp_output_element.rs
src/config/: amqp_input_api.rs  amqp_output_api.rs  api.rs  config.rs  mod.rs
